# findroot-rs

./: .gitignore  Cargo.toml  README.md
src/: brent.rs  broyden.rs  jacobian.rs  lib.rs  newton.rs  sand.rs  steffensen.rs  traits.rs  wegstein.rs
