[package]
name = "findroot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
thiserror = "1.0.50"

[dev-dependencies]
approx = "0.5.0"
